--- a/angular/package.json
+++ b/angular/package.json
@@ -19,6 +19,7 @@
     "@abp/ng.oauth": "~7.3.0",
     "@abp/ng.setting-management": "~7.3.0",
     "@abp/ng.tenant-management": "~7.3.0",
+    "@abp/ng.theme.basic": "^7.3.0",
     "@abp/ng.theme.lepton-x": "~2.3.0-rc.1",
     "@abp/ng.theme.shared": "~7.3.0",
     "@angular/animations": "~16.0.0",
@@ -34,6 +35,7 @@
     "moment": "^2.29.4",
     "rxjs": "7.8.1",
     "tslib": "^2.1.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
