--- a/aspnet-core/src/WIZLOG.Application/WIZLOG.Application.csproj
+++ b/aspnet-core/src/WIZLOG.Application/WIZLOG.Application.csproj
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.102.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.3.0" />
