--- a/aspnet-core/src/WIZLOG.DbMigrator/WIZLOG.DbMigrator.csproj
+++ b/aspnet-core/src/WIZLOG.DbMigrator/WIZLOG.DbMigrator.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>    
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />    
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
