--- a/aspnet-core/src/WIZLOG.Domain/WIZLOG.Domain.csproj
+++ b/aspnet-core/src/WIZLOG.Domain/WIZLOG.Domain.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Volo.Abp.Emailing" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.3.0" />
