--- a/aspnet-core/src/WIZLOG.EntityFrameworkCore/WIZLOG.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/WIZLOG.EntityFrameworkCore/WIZLOG.EntityFrameworkCore.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WIZLOG.Domain\WIZLOG.Domain.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.3.0" />
