--- a/aspnet-core/src/WIZLOG.HttpApi.Host/WIZLOG.HttpApi.Host.csproj
+++ b/aspnet-core/src/WIZLOG.HttpApi.Host/WIZLOG.HttpApi.Host.csproj
@@ -11,6 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.102.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="7.3.0" />
