--- a/aspnet-core/src/WIZLOG.HttpApi/WIZLOG.HttpApi.csproj
+++ b/aspnet-core/src/WIZLOG.HttpApi/WIZLOG.HttpApi.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Volo.Abp.Account.HttpApi" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="7.3.0" />
