--- a/aspnet-core/test/WIZLOG.TestBase/WIZLOG.TestBase.csproj
+++ b/aspnet-core/test/WIZLOG.TestBase/WIZLOG.TestBase.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Volo.Abp.TestBase" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.Autofac" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.Authorization" Version="7.3.0" />
